version 2023b, in progress
- "arima" command: implement built-in procedure for assessing
  lag orders, via new --lagselect option, and add GUI access
- "corr" command: add 1 percent critical value of correlation
  coefficient to the output
- Fix bug: memory corruption on try to append an array to
  itself
- Fix bug: single-equation LIML could fail when there's no
  constant in the specification
- Add new example data file: sunspots time series from 1740

2023-03-02 version 2023a
- "logit" command (binary case): add a matrix holding odds
  ratios plus standard errors and confidence intervals to the
  $model bundle; also make this information available under
  the Analysis menu in the GUI model window
- "set" command: add key "hac_missvals" to select the policy
  for HAC estimation when there are incomplete observations;
  and make the Equal Spacing method the default
- "gnuplot" and "plot" commands: putting an .html suffix onto
  the output filename now invokes gnuplot's "canvas" driver
- "midasreg" command: generate more specific error message
  for invalid specification
- "fcast" command: enable the --plot option for forecasts
  based on a system, when a single series is selected;
  introduce --all-probs option for ordered logit/probit and
  multinomial logit models
- "system" command: ensure that the $system bundle includes
  the sample limits as "sample_t1" and "sample_t2"
- strptime() and strftime() functions: generalize to allow
  vectorized usage, and add variants (strpday, strfday) to
  work with epoch days rather than Unix time
- pexpand() function: add optional boolean switch to expand
  in the cross-sectional dimension
- readfile() function: ensure that we construct a legitimate
  local filename when downloading a web resource
- normtest() function: add option to include all available
  tests in the returned matrix
- int() function: return NA if the integer part of the argument
  lies beyond the range of a 32-bit signed integer